--- a/AzureProject/Views/Home/Index.cshtml
+++ b/AzureProject/Views/Home/Index.cshtml
@@ -1,31 +1,39 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+@*<h2>Index</h2>
+    <label>Select File:</label>
+    <input type="file" value="Choose file" />
+    <label>Import From Excel:</label>
+    <input type="submit" value="Choose file" />
+    <label>Export to Excel:</label>
+    <input type="submit" value="Choose file" />*@
+<link href="~/Scripts/sweetalert.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script src="~/Scripts/sweetalert.js"></script>
+<div align="center">
+    @if (ViewBag.Message != null)
+    {
+        <span class="alert alert-warning"> @ViewBag.Message</span>
+    }
+
+    <div align="right" class="btn btn-default">
+        @using (Html.BeginForm("UploadExcel", "Home", FormMethod.Post, new { @enctype = "multipart/form-data" }))
+        {
+            <input type="file" id="fileUpload" class="btn btn-primary" name="FileUpload" /><br />
+            <input type="submit" class="btn btn-primary" name="UploadNewEmployee" id="fileUploadExcel" value="Upload s Employee Details" />
+        }
+    </div>
+
+    <div align="right" class="btn btn-default">
+        @using (Html.BeginForm("DownloadExcel", "Home", FormMethod.Get, new { @enctype = "multipart/form-data" }))
+        {
+            
+            <input type="submit" class="btn btn-danger" value="DownloadExcel" />
+        }
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
